--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,9 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Set up CMake
-        uses: lukka/get-cmake@v2
+        uses: lukka/get-cmake@v3
         with:
-          cmakeVersion: '3.19.2'
+          cmake-version: '3.19.2'
           
       - name: Configure CMake
         run: cmake -S . -B build
