--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
-      - name: Set up CMake
-        uses: lukka/get-cmake@v2
-        with:
-          cmake-version: '3.19.2'
-          
+      - name: Install CMake
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget
+          wget https://github.com/Kitware/CMake/releases/download/v3.19.2/cmake-3.19.2-Linux-x86_64.sh
+          sudo mkdir /opt/cmake
+          sudo sh cmake-3.19.2-Linux-x86_64.sh --skip-license --prefix=/opt/cmake
+          echo "/opt/cmake/bin" >> $GITHUB_PATH
+
       - name: Configure CMake
         run: cmake -S . -B build
         
